Fixed artist page layout on Firefox and an overlap between More link and zone border that started happening again after the attributions were removed.

--- a/dumbhippo/trunk/server/web/css2/artist-positions.css
+++ b/dumbhippo/trunk/server/web/css2/artist-positions.css
@@ -3,15 +3,15 @@
 #dhContentColumn .dh-zone-box .dh-artist-profile {
     position:      relative;
     width:         100%;
-	margin-bottom: 2px;
+	margin-bottom: 10px;
 }
 
 .dh-artist-image {
     position: relative;
     float:    left;
     width:    80px;
-    height:   100%;
     overflow: hidden;
+	margin-bottom: 10px;
 }
 
 .dh-artist-info {
@@ -42,6 +42,7 @@
     float:    left;
     clear:    right;
     display:  table;
+    width:    390px;
 }
 
 .dh-album-title {
@@ -57,9 +58,10 @@
 }
 
 .dh-album-buy {
-    float:   left;
-    display: table-cell;
-    clear:   right;
+    float:        right;
+    display:      table-cell;
+    /* in Firefox, the buy link does not align to the right of the table without this */
+    margin-right: -8px; 
 }
 
 .dh-songs {
@@ -72,7 +74,7 @@
     float:   left;
     display: table-row;
     clear:   left;
-    width:   390px;
+    width:   100%;
     padding: 3px;
 }
 
@@ -105,14 +107,10 @@
     margin-bottom: 0px;
 }
 
-.dh-album .dh-album-info .dh-album-buy {
-    float:        right;
-    display:      inline;
-    margin-right: 20px;
-}
-
 #dhContentColumn .dh-zone-box .dh-artist-more .dh-more {
-    position: relative;
-    float:    left;
-    clear:    both; 
+    position:      relative;
+    float:         left;
+    clear:         both; 
+    margin-top:    5px;
+    margin-bottom: 0px;
 }
